test/spec_vectors/simd_int_to_int_extend/fail/module_23.wat
(module (func $i64x2.extend_low_i32x4_s-arg-empty (result v128) (i64x2.extend_low_i32x4_s)))